--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             border-radius: 10px;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
         }
+        #register {
+            display: block; /* Отображаем форму регистрации по умолчанию */
+        }
         h2 {
             margin-bottom: 20px;
         }
@@ -55,10 +58,10 @@
             cursor: not-allowed;
         }
         #burger {
-            width: 40vw;
-            height: 40vw;
-            max-width: 300px;
-            max-height: 300px;
+            width: 50vw;
+            height: 50vw;
+            max-width: 400px;
+            max-height: 400px;
             background-image: url('https://username.github.io/repository-name/burger.png');
             background-size: cover;
             margin: 30px;
@@ -70,14 +73,14 @@
             display: flex;
             justify-content: space-around;
             width: 100%;
-            max-width: 500px;
+            max-width: 600px;
             margin-top: 20px;
             color: #333;
             font-weight: bold;
         }
         #energy-bar-container {
             width: 100%;
-            max-width: 500px;
+            max-width: 600px;
             margin-top: 20px;
             text-align: center;
             position: relative;
@@ -89,7 +92,7 @@
             overflow: hidden;
             margin: 10px 0;
             position: relative;
-            height: 30px; /* Высота полосы */
+            height: 40px; /* Высота полосы */
         }
         #energy {
             height: 100%; /* Высота полосы */
@@ -103,10 +106,11 @@
         }
         #energy-text {
             position: absolute;
-            left: 50%;
+            left: 10px;
             top: 50%;
-            transform: translate(-50%, -50%);
+            transform: translateY(-50%);
             color: #333;
+            font-size: 14px; /* Уменьшаем размер шрифта */
             font-weight: bold;
             z-index: 1; /* Показать текст поверх полосы */
         }
@@ -116,6 +120,7 @@
             top: 50%;
             transform: translateY(-50%);
             color: #333;
+            font-size: 14px; /* Уменьшаем размер шрифта */
             font-weight: bold;
             z-index: 1; /* Показать текст поверх полосы */
         }
@@ -123,7 +128,7 @@
 </head>
 <body>
     <!-- Регистрация -->
-    <div id="register" style="display: block;"> <!-- Начально отображаем форму регистрации -->
+    <div id="register">
         <h2>Регистрация</h2>
         <input type="text" id="regNickname" placeholder="Введите никнейм">
         <input type="password" id="regPassword" placeholder="Введите пароль">
@@ -311,7 +316,7 @@
                     pointsPerClick: pointsPerClick,
                     upgradeCost: upgradeCost,
                     tapsForNextLevel: tapsForNextLevel
-                });
+                }, { merge: true }); // Используем merge: true, чтобы обновлять только измененные поля
                 console.log('Data saved to Firestore');
             } catch (error) {
                 console.error('Error saving data:', error);
