--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #e0e0e0;
+            background-color: #b3b3b3;
             background-image: url('123.png'); /* Замените на путь к вашему PNG изображению */
             background-size: cover;
             background-position: center;
@@ -22,7 +22,7 @@
         #register, #login, #game {
             display: none;
             text-align: center;
-            background: rgba(255, 255, 255, 0.9);
+            background: rgba(120, 120, 120, 0.9);
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
@@ -62,7 +62,7 @@
             height: 50vw;
             max-width: 400px;
             max-height: 400px;
-            background-image: url('https://username.github.io/repository-name/burger.png');
+            background-image: url('whoppe.png');
             background-size: cover;
             margin: 30px;
             cursor: pointer;
@@ -349,7 +349,7 @@
         // Восстановление энергии
         const restoreEnergy = () => {
             if (energy < maxEnergy) {
-                energy = Math.min(energy + 10, maxEnergy);
+                energy = Math.min(energy + 3, maxEnergy);
                 updateStats();
             }
         };
